--- a/nancysake/nancysake/packages.config
+++ b/nancysake/nancysake/packages.config
@@ -14,4 +14,11 @@
   <package id="Nancy" version="1.4.3" targetFramework="net452" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net452" />
   <package id="Nancy.Testing" version="1.4.1" targetFramework="net452" />
+  <package id="NUnit.Console" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.ConsoleRunner" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net452" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net452" />
 </packages>
