--- a/nancysake/nancysake/Web.config
+++ b/nancysake/nancysake/Web.config
@@ -5,14 +5,15 @@
   -->
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-  <httpHandlers>
+    <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </httpHandlers></system.web>
+    </httpHandlers>
+  </system.web>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
@@ -25,7 +26,10 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-  <httpErrors existingResponse="PassThrough" /><handlers>
+    <httpErrors existingResponse="PassThrough" />
+    <handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
 </configuration>
+<!--ProjectGuid: {E0C6126D-B9E6-429A-AE38-035E544408B4}-->
