--- a/nancysake/nancysake/nancysake.csproj
+++ b/nancysake/nancysake/nancysake.csproj
@@ -130,6 +130,8 @@
   <ItemGroup>
     <Compile Include="Modules\NumberModule\NumberModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\NancyRepo.cs" />
+    <Compile Include="Services\BuildVersionService.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
